--- a/.github/workflows/parse-endless-sky.yml
+++ b/.github/workflows/parse-endless-sky.yml
@@ -34,10 +34,10 @@ jobs:
             libxi-dev libglu1-mesa-dev libglew-dev pkg-config \
             build-essential libcairo2-dev libpango1.0-dev \
             libjpeg-dev libgif-dev librsvg2-dev \
-            mesa-utils libgl1-mesa-dri libgl1-mesa-glx \
-            xvfb libglvnd0 libglx0 libgl1
+            mesa-utils libgl1-mesa-dri \
+            xvfb libglvnd0 libglx0 libosmesa6
           npm install
-              
+
       - name: Run parser
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
